@@ -3,9 +3,9 @@
 PGPLOT module for Perl
 ----------------------
 
-Karl Glazebrook, Anglo-Australian Observatory
+Karl Glazebrook
 
-kgb@aaoepp.aao.gov.au
+karlglazebrook@yahoo.com
 
 [see file CHANGES for new features]
 
